increase input text size to avoid auto zooming on mobile

--- a/src/components/SearchPage/index.css
+++ b/src/components/SearchPage/index.css
@@ -31,6 +31,7 @@ input[type="text"] {
   height: 100%;
   padding: 0 1rem;
   border-radius: 0;
+  font-size: 1rem;
 }
 
 input:focus {
